--- a/app/views/about.html
+++ b/app/views/about.html
@@ -11,17 +11,24 @@
     <h1 class="abouttxt"style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
     <br>
     <h2 class="abouttxt"style="color:#ffffff;"> What is Security Base? </h2>
-    <p style="color:#ffffff;">Security-Base goal is to regroup in a single place
-    all forums, online tools, irc channels, blogs etc directly or indirectely
-    related to information security. This project started as a sort of super
-    bookmarkt for myself and I thought it would be nice to have this online and try
-    to get some contributions.
+    <p style="color:#ffffff;">Security-Base aim to to regroup in a single place
+    all forums, irc channels, blogs, tools, etc directly or indirectely
+    related to security / infosec. This project started as a sort of super
+    bookmarkt for myself and I put it online in the hope that people will contribute to it
+    and add more bases :)
+
+
   </p>
     <h2 class="abouttxt"style="color:#ffffff;"> Contribute </h2>
-    <p style="color:#ffffff;">If you want to contribute to this project feel free to submit a pull
-    request on either the <href="">frontend repository or the backend repository on Github </p>
+    <p style="color:#ffffff;">If you want to contribute to this project you can add links or
+      make a pull request on either the<a href="https://github.com/misterch0c/SL-frontend"> frontend repository</a>
+     or the
+    <a href="https://github.com/misterch0c/SL-backend"> backend repository</a> on Github. If you have other ideas
+    or you want to create a bot that will scrape twitter for infosec blogs and feed them to Security Base or something like that then feel free
+    to shoot me a <a target="_blank" href="https://twitter.com/MisterCh0c">tweet</a> or an email.
+    There is a tag system in place but the data are not tagged. So even if you're not a programmer and don't have links you can still help.
 
-
+</p>
 </div>
 
 </div>
