--- a/app/views/blogs.html
+++ b/app/views/blogs.html
@@ -1,7 +1,15 @@
 <br/>
+<br/>
+<br/>
 <div class="size" ui-view="filters"></div>
-<br/>
-<br/>
+<div class="centre" style="width:400px;"><pre class="art">
+	██████╗ ██╗      ██████╗  ██████╗ ███████╗
+	██╔══██╗██║     ██╔═══██╗██╔════╝ ██╔════╝
+	██████╔╝██║     ██║   ██║██║  ███╗███████╗
+	██╔══██╗██║     ██║   ██║██║   ██║╚════██║
+	██████╔╝███████╗╚██████╔╝╚██████╔╝███████║
+	╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝
+                                                    </pre></div>
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
 <div ng-if="!show" class="centre" masonry>
