--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,15 +4,17 @@
 <div class="size" ui-view="filters"></div>
 
 
+<div class="centre" style="width:400px;"><pre class="art">
+  ██████╗  ██████╗  █████╗ ██████╗ ██████╗ ███████╗
+  ██╔══██╗██╔═══██╗██╔══██╗██╔══██╗██╔══██╗██╔════╝
+  ██████╔╝██║   ██║███████║██████╔╝██║  ██║███████╗
+  ██╔══██╗██║   ██║██╔══██║██╔══██╗██║  ██║╚════██║
+  ██████╔╝╚██████╔╝██║  ██║██║  ██║██████╔╝███████║
+  ╚═════╝  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═════╝ ╚══════╝
+                                                    </pre></div>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- infosec -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-1029441716643371"
-     data-ad-slot="5863532645"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
 <div masonry  ng-if="!show" infinite-scroll='limited("Board")' infinite-scroll-disabled='base.busy' infinite-scroll-distance='0' class="centre" >
@@ -42,7 +44,7 @@
 					<span class="glyphicon glyphicon-ok" style="color:green" ng-show="{{n.isup}}" data-toggle="tooltip" data-placement="top" title="Online"></span>
 					<span class="glyphicon glyphicon-remove" style="color:red" ng-hide="{{n.isup}}" data-toggle="tooltip" data-placement="top" title="Offline"></span>
 				</div>
-				
+
 			</h3>
 		</div>
 
