--- a/app/views/irc.html
+++ b/app/views/irc.html
@@ -1,235 +1,48 @@
 <div class="topspace">
 
-<div class="centre " style="width:500px;"><pre class="art">
-  ______        _______ _______  ______ __   _ _______ _______
- |       |      |______ |_____| |_____/ | \  | |______    |
- |_____  |_____ |______ |     | |    \_ |  \_| |______    |
 
-                                                    </pre></div>
-<table >
-    <thead>
-        <tr>
-            <th >Freenode (irc.freenode.net/6697(ssl))</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#Archlinux</td>
-            <td>Welcome to Arch Linux Wold Domination</td>
-        </tr>
-        <tr>
-            <td>##crypto</td>
-            <td>For cryptography theory and practice</td>
-        </tr>
-        <tr>
-            <td>#cuckosandbox</td>
-            <td><a href="http://www.cuckoosandbox.org/">http://www.cuckoosandbox.org/</a></td>
-        </tr>
-        <tr>
-            <td>#da7Q_9RnPjm</td>
-            <td>The "Dark Army" irc channel seen in the TV Show Mr Robot</td>
-        </tr>
-        <tr>
-            <td>#digitalocean</td>
-            <td><a href="https://www.digitalocean.com/">https://www.digitalocean.com/</a></td>
-        </tr>
-        <tr>
-            <td>#Linux</td>
-            <td><a href="http://www.linuxassist.net/channel-rules/">http://www.linuxassist.net/channel-rules/</a></td>
-        </tr>
-        <tr>
-            <td>#Malwr</td>
-            <td><a href="https://malwr.com/">https://malwr.com/</a></td>
-        </tr>
-        <tr>
-            <td>#Metasploit</td>
-            <td>Richard Hamilton</td>
-        </tr>
-        <tr>
-            <td>#offsec</td>
-            <td><a href="https://www.offensive-security.com/">Offensive Security</a> channel </td>
-        </tr>
-        <tr>
-            <td>#r_netsec</td>
-            <td><a href="http://reddit.com/r/netsec">/r/netsec</a> channel </td>
-        </tr>
-        <tr>
-            <td>##security</td>
-            <td>Computer & Physical Security <a href="http://fnsecurity.org">http://fnsecurity.org</a> <a href="http://ow.ly/gsVTo">http://ow.ly/gsVTo</a></td>
-        </tr>
-        <tr>
-            <td>#vulnhub</td>
-            <td><a href="https://www.vulnhub.com">Vulnhub</a> </td>
-        </tr>
-    </tbody>
-</table>
-<table>
-    <thead>
-        <tr>
-            <th>Rizon (irc.rizon.net/6697(ssl))</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#/g/punk</td>
-            <td>4chan.org/g/</td>
-        </tr>
-        <tr>
-            <td>#/g/technology</td>
-            <td>4chan.org/g/</td>
-        </tr>
-        <tr>
-            <td>#/g/wdg</td>
-            <td>Wev Developping general (4chan.org/g/)</td>
-        </tr>
-        <tr>
-            <td>#reverseengineering</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>#Zenk-security</td>
-            <td>Luol Deng</td>
-        </tr>
-        <tr>
-            <td>#Linux</td>
-            <td>Taj Gibson</td>
-        </tr>
-    </tbody>
-</table>
-<table>
-    <thead>
-        <tr>
-            <th>Hakcerzvoice (irc.hackerzvoice.net/6697(ssl))</th>
-            <th></th>
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#hzv</td>
-            <td>Bienvenue sur #HZV - hzv will never die - <a href="http://twitter.com/hackerzvoice">http://twitter.com/hackerzvoice/a></td>
-
-   		 </tr>
-        <tr>
-     	 <td>#real-asm</td>
-     	 <td></td>
-        </tr>
-
-        <tr>
-      <td>#Root-Me</td>
-      <td><a href="http://www.root-me.org/">http://www.root-me.org/ </a></td>
-        </tr>
-        <tr>
-            <td>#Shell-Storm</td>
-            <td></td>
-        </tr>
+    <div class="centre" style="width:800px;"><pre class="art">
+      ██▓ ██▀███   ▄████▄      ▄████▄   ██░ ██  ▄▄▄       ███▄    █  ███▄    █ ▓█████  ██▓      ██████
+     ▓██▒▓██ ▒ ██▒▒██▀ ▀█     ▒██▀ ▀█  ▓██░ ██▒▒████▄     ██ ▀█   █  ██ ▀█   █ ▓█   ▀ ▓██▒    ▒██    ▒
+     ▒██▒▓██ ░▄█ ▒▒▓█    ▄    ▒▓█    ▄ ▒██▀▀██░▒██  ▀█▄  ▓██  ▀█ ██▒▓██  ▀█ ██▒▒███   ▒██░    ░ ▓██▄
+     ░██░▒██▀▀█▄  ▒▓▓▄ ▄██▒   ▒▓▓▄ ▄██▒░▓█ ░██ ░██▄▄▄▄██ ▓██▒  ▐▌██▒▓██▒  ▐▌██▒▒▓█  ▄ ▒██░      ▒   ██▒
+     ░██░░██▓ ▒██▒▒ ▓███▀ ░   ▒ ▓███▀ ░░▓█▒░██▓ ▓█   ▓██▒▒██░   ▓██░▒██░   ▓██░░▒████▒░██████▒▒██████▒▒
+     ░▓  ░ ▒▓ ░▒▓░░ ░▒ ▒  ░   ░ ░▒ ▒  ░ ▒ ░░▒░▒ ▒▒   ▓▒█░░ ▒░   ▒ ▒ ░ ▒░   ▒ ▒ ░░ ▒░ ░░ ▒░▓  ░▒ ▒▓▒ ▒ ░
+      ▒ ░  ░▒ ░ ▒░  ░  ▒        ░  ▒    ▒ ░▒░ ░  ▒   ▒▒ ░░ ░░   ░ ▒░░ ░░   ░ ▒░ ░ ░  ░░ ░ ▒  ░░ ░▒  ░ ░
+      ▒ ░  ░░   ░ ░           ░         ░  ░░ ░  ░   ▒      ░   ░ ░    ░   ░ ░    ░     ░ ░   ░  ░  ░
+      ░     ░     ░ ░         ░ ░       ░  ░  ░      ░  ░         ░          ░    ░  ░    ░  ░      ░
+                  ░           ░
+                                                        </pre></div>
 
 
-    </tbody>
-</table>
 
-<table>
-    <thead>
-        <tr>
-            <th>MalwareTech (irc.malwaretech.com/6697(ssl))</th>
-            <th></th>
+  <div masonry class="centre" isotope-container="isotope-container">
 
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#MalwareTech</td>
- 			<td><a href= "http://malwaretech.com/">http://malwaretech.com/</a></td>
-   		 </tr>
+    <div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="serv in servs">
 
-    </tbody>
-</table>
+      <div class="panel-heading" style="text-align:left;">
 
-<div class="centre" style="width:250px;"><pre class="art">
+        <span class="raw-title">{{serv.name}}</span><br>
+        <span class="raw-title">{{serv.adr}}/{{serv.port}}</span>
+      </div>
+      <ul  class="raw-link">
+        <li ng-repeat="n in ircs | filter: {server: serv.name}"
+        data-trigger="hover"
+         bs-popover data-html="true" data-animation="am-fade-and-scale"
+         data-content="{{n.description}}">
 
-  _______ _____   ______
-    |    |     | |_____/
-    |    |_____| |    \_
+          <a ng-if="isLink(n.description)"  href="{{n.description}}" target="_blank">
+          {{n.channel}}</a>
+          <span ng-if="!isLink(n.description)" style="color:#999999" >
+          {{n.channel}}</span>
 
- </pre></div>
- <table>
-    <thead>
-        <tr>
-            <th></th>
-            <th></th>
+        </li>
+      </ul>
 
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#</td>
- 			<td>None yet, feel free to use "add base"</td>
-   		 </tr>
-        <tr>
+    </div>
 
 
-    </tbody>
-</table>
+  </div>
 
 
-<div class="centre" style="width:250px;"><pre class="art">
-     _____ ____  _____
-       |    ___]|_____]
-     __|__ |___ |
-
- </pre></div>
-
-<table>
-    <thead>
-        <tr>
-            <th>I2P: (127.0.0.1/6668)</th>
-            <th></th>
-
-        </tr>
-        <tr>
-            <th>Channel</th>
-            <th>Description</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>#anonops</td>
- 			<td>Can't wait for you to fill my hole with your knowledge juice | RAWR! | #i2people | #salt | POONTANG CLAN</td>
-   		 </tr>
-        <tr>
-            <td>#bitcoin</td>
- 			<td></td>
-   		 </tr>
-        <tr>
-            <td>#i2p</td>
- 			<td>I2P Community & Support Channel | Current: 0.9.20 | Off-topic discussions to #i2p-chat | Multi-line pastes to pastethis.i2p | Report bugs at trac.i2p2.i2p | plugins.i2p | forum.i2p | id3nt.i2p | With I2P, IRC is: 127.0.0.1:6668</td>
-   		 </tr>
-        <tr>
-            <td>#leftsec</td>
- 			<td>IRC2P channel for /r/socialistprogrammers - weekly discussion 8pm UTC+1 - guidelines: COMPARTMENTAlIZATION, NO CHAT LOGS, FAKE IDENTITIES</td>
-   		 </tr>
-
-    </tbody>
-</table>
 </div>
