--- a/app/views/about.html
+++ b/app/views/about.html
@@ -11,7 +11,7 @@
     <h1 class="abouttxt"style="color:#ffffff">{{nbBases}} BASES ARE BELONG TO US</h1>
     <br>
     <h2 class="abouttxt"style="color:#ffffff;"> What is Security Base? </h2>
-    <p style="color:#ffffff;">Security-Base aim to to regroup in a single place
+    <p style="color:#ffffff;">Security-Base aim to regroup in a single place
     all forums, irc channels, blogs, tools, etc directly or indirectely
     related to security / infosec. This project started as a sort of super
     bookmarkt for myself and I put it online in the hope that people will contribute to it
