--- a/app/views/blogs.html
+++ b/app/views/blogs.html
@@ -1,6 +1,6 @@
 <br/>
 <br/>
-<br/>
+<br/> 
 <div class="size" ui-view="filters"></div>
 <div class="centre" style="width:450px;"><pre class="art">
 	██████╗ ██╗      ██████╗  ██████╗ ███████╗
@@ -50,9 +50,9 @@
 			<span class="raw-title">{{fullLanguageName(l)}}</span>
 		</div>
 		<ul class="raw-link" >
-			<li ng-repeat="n in blogs | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" id="bind-html-with-sanitize" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
+			<li ng-repeat="n in rawBlogs | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" id="bind-html-with-sanitize" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
 				{{n.description}}
-				<img src='http://security-base.com/assets/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
+				<img src='https://security-base.com/assets/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
 				">
 				<a href="{{n.link}}" target="_parent">
 					{{n.title}}
