fix css for tags

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -43,7 +43,7 @@
 			</h3>
 		</div>
 
-		<div class="panel-bod paneltxt">
+		<div ng-class="n.tags.length > 0 ? 'panel-bod-tag':'panel-bod'" class=" paneltxt">
 			 <a href="{{n.link}}" target="_blank" class="fill-div" style="color:inherit">
 
 			{{n.description}}
