--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -224,6 +224,11 @@ body.pml-open #wrapper {
 	padding-right: 10px;
 	padding-top: 5px;
 	height: 100px;
+}.panel-bod-tag{
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 5px;
+	height: 78px;
 }
 .panel-footer{
 	padding-top: 2px;
