New filters + correction of data grabbing in scrolling mode + downloading raw data only once at app loading

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -487,3 +487,7 @@ tr:last-child td:first-child {
 tr:last-child td:last-child {
   border-bottom-right-radius: 6px;
 }
+
+.hidden {
+	display: none;
+}
