--- a/app/views/blogs.html
+++ b/app/views/blogs.html
@@ -12,9 +12,9 @@
                                                     </pre></div>
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
-<div masonry  ng-if="!show" infinite-scroll='limited("Blog")' infinite-scroll-disabled='base.busy' infinite-scroll-distance='0' class="centre" >
+<div masonry  ng-if="!show" infinite-scroll='nextLinks(links, "Blog")' infinite-scroll-disabled='base.busy' infinite-scroll-distance='0' class="centre" >
 
-	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in blogs | filterLinks:lang:hideDownLinks:tags | orderBy : sortBy">
+	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in links">
 
 		<div class="panel-heading">
 			<h3 class="panel-title pantitle txt">
@@ -43,14 +43,14 @@
 <!-- Raw View -->
 <div ng-if="show" class="centre" isotope-container="isotope-container" masonry>
 
-	<div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languagesBlogs">
+	<div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languagesBlogs | filter:{key:lang}">
 
 		<div class="panel-heading" style="text-align:left;">
-			<i class="{{l}} flag"></i>
-			<span class="raw-title">{{fullLanguageName(l)}}</span>
+			<i class="{{l.key}} flag"></i>
+			<span class="raw-title">{{l.value}}</span>
 		</div>
 		<ul class="raw-link" >
-			<li ng-repeat="n in rawBlogs | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" id="bind-html-with-sanitize" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
+			<li ng-repeat="n in rawBlogs| filter: {lang: l.key} | filterLinks:'':hideDownLinks:tags:sortBy:showPrivate" id="bind-html-with-sanitize" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
 				{{n.description}}
 				<img src='https://security-base.com/assets/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
 				">
