--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,9 +16,9 @@
 
 <!-- Panel View -->
 <!-- {lang: lang, tags: ['tag5','tag2'], isup: hideDownLinks ? true : '' } -->
-<div masonry  ng-if="!show" infinite-scroll='limited("Board")' infinite-scroll-disabled='base.busy' infinite-scroll-distance='0' class="centre" >
+<div masonry  ng-if="!show" infinite-scroll='nextLinks(links, "Board")' infinite-scroll-disabled='base.busy' infinite-scroll-distance='0' class="centre" >
 
-	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in links | filterLinks:lang:hideDownLinks:tags | orderBy : sortBy" >
+	<div class="masonry-brick panel panelpanel panpanel-default" ng-repeat="n in links" ng-click="openTab(n.link)">
 
 		<div class="panel-heading">
 			<h3 class="panel-title pantitle txt">
@@ -60,15 +60,15 @@
 <!-- Raw View -->
 <div masonry ng-if="show" class="centre" isotope-container="isotope-container">
 
-	<div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languages">
+	<div class="masonry-brick panel  panelraw panpanel-default " ng-repeat="l in languages | filter:{key:lang}">
 
 		<div class="panel-heading" style="text-align:left;">
-			<i class="{{l}} flag"></i>
-			<span class="raw-title">{{fullLanguageName(l)}}</span>
+			<i class="{{l.key}} flag"></i>
+			<span class="raw-title">{{l.value}}</span>
 		</div>
 		<ul class="raw-link">
 
-			<li ng-repeat="n in rawLinks | filter: {lang: l} | filterLinks:'':hideDownLinks:tags | orderBy : sortBy" title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
+			<li ng-repeat="n in rawLinks | filter: {lang: l.key} | filterLinks:'':hideDownLinks:tags:sortBy:showPrivate " title="{{n.title}}" data-trigger="hover" bs-popover data-html="true" data-animation="am-fade-and-scale" data-content="
 				{{n.description}}
 				<img src='https://security-base.com/assets/screenshots/{{n.title}}.png' class='img-thumbnail panel-thumb'></img>
 				">
